# self-improving-agent

./: .dockerignore  .env.example  .gitignore  .junit-results.xml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  architecture-viz.jsx  docker-compose.yml  main.py  production-readiness-prompt.md  pyproject.toml  requirements.txt  runtime_entrypoint.py
config/: agent.toml  benchmarks.json
docs/: AGENTCORE.md  ARCHITECTURE.md
infra/: agent_stack.py  app.py  cdk.json
infra/infra_utils/: agentcore_role.py  build_trigger_lambda.py
reports/: gen-5.json
skills/self-review/: SKILL.md
sops/: code-improvement.sop.md
src/agents/: orchestrator.py  personas.py
src/benchmarks/: runner.py
src/core/: agentcore.py  config.py  loop.py  models.py  providers.py  reporting.py  safety.py
src/git_ops/: git_manager.py  github.py
steering/: project-rules.md
tests/: test_agent.py  test_agentcore.py  test_integration_live.py
