[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "self-improving-agent"
version = "1.0.0"
description = "A self-improving AI coding agent that reviews, benchmarks, and evolves its own codebase"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0",
    "pytest-cov>=4.0,<6.0",
    "mypy>=1.5,<2.0",
    "ruff>=0.5.0,<1.0",
]
aws = [
    "boto3>=1.34.0",
]
agentcore = [
    "bedrock-agentcore<=0.1.5",
    "bedrock-agentcore-starter-toolkit==0.1.14",
    "boto3>=1.34.0",
]
github = [
    "PyGithub>=2.0",
]

[project.scripts]
self-improve = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
